--- a/templates/Print.html
+++ b/templates/Print.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Print</title>
+
+    <style>
+
         table {
             width: 100%;
             border-collapse: collapse;
@@ -15,100 +18,56 @@
         body {
     background:linear-gradient(to left, #33ccff 0%, #ffffff 100% );
 }
+    h3{text-align:center}
 
+    </style>
 </head>
 <body>
-            <input type="button" onclick="print()" name="button" id="pbtn" typeof="lg" value="Print" formaction="/display" formmethod="get">
 
-            <form action="/display_records" method="get" >
-                <table>
-                    <tr>
-                        <th>Sl_no</th>
-                        <th>Branch</th>
-                        <th>Roll_no</th>
-                        <th>Names</th>
-                        <th>Email_id</th>
-                        <th>Mobile_No</th>
-                        <th>Semester</th>
-                    </tr>
-                    <tr>
+        <h3>College Management System</h3>
+                    <table class="table">
+                        <tr>
+                            <th>Sl_no</th>
+                            <th>Branch</th>
+                            <th>Roll_no</th>
+                            <th>Names</th>
+                            <th>Email_id</th>
+                            <th>Mobile_No</th>
+                            <th>Semester</th>
+                            <th>date</th>
+                            <th>sub1</th>
+                            <th>sub2</th>
+                            <th>sub3</th>
+                            <th>sub4</th>
+                            <th>sub5</th>
+                            <th>sub6</th>
+                        </tr>
                         {%for items in data %}
-                        <td>{{items[0]}}</td>
-                        <td>{{items[1]}}</td>
-                        <td>{{items[2]}}</td>
-                        <td>{{items[3]}}</td>
-                        <td>{{items[4]}}</td>
-                        <td>{{items[5]}}</td>
-                        <td>{{items[6]}}</td>
-                        <td>{{items[7]}}</td>
-                            {% endfor %}
-                    </tr>
-                </table>
-                <button type="button" name="button" value="student_records" formmethod="get" formaction="/display_attendance">Records</button>
-            </form>
-            <br />
-            <form action="/display_attendance" method="get">
-                <table>
-                    <tr>
-                        <th>Date</th>
-                        <th>Semester</th>
-                        <th>Roll_no</th>
-                        <th>Sub1</th>
-                        <th>Sub2</th>
-                        <th>Sub3</th>
-                        <th>Sub4</th>
-                        <th>Sub5</th>
-                        <th>Sub6</th>
+                        <tr>
 
-                    </tr>
-                    <tr>
-                        {%for items in data1 %}
-                        <td>{{items[0]}}</td>
-                        <td>{{items[1]}}</td>
-                        <td>{{items[2]}}</td>
-                        <td>{{items[3]}}</td>
-                        <td>{{items[4]}}</td>
-                        <td>{{items[5]}}</td>
-                        <td>{{items[6]}}</td>
-                        <td>{{items[7]}}</td>
-                        <td>{{items[8]}}</td>
-                        <td>{{items[9]}}</td>
-                            {% endfor %}
-                    </tr>
-                </table>
-                <button type="button" name="button" value="student_records" formmethod="get" formaction="/display_attendance">Records</button>
-            </form>
+                            <td>{{items[0]}}</td>
+                            <td>{{items[1]}}</td>
+                            <td>{{items[2]}}</td>
+                            <td>{{items[3]}}</td>
+                            <td>{{items[4]}}</td>
+                            <td>{{items[5]}}</td>
+                            <td>{{items[6]}}</td>
+                            <td>{{items[7]}}</td>
+                            <td>{{items[10]}}</td>
+                            <td>{{items[11]}}</td>
+                            <td>{{items[12]}}</td>
+                            <td>{{items[13]}}</td>
+                            <td>{{items[14]}}</td>
+                            <td>{{items[15]}}</td>
+                        </tr>
+                                {% endfor %}
+                    </table>
 
+
+
+
+        <form style="text-align:left;">
+            <button type="submit" id="logout" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
+        </form>
 </body>
 </html>
-
-
-var AddRown = document.getElementById('students_table');
-                var NewRow = AddRown.insertRow(n);
-
-                list1[x] = document.getElementById("sl_no").value;
-                list2[x] = document.getElementById("branch").value;
-                list3[x] = document.getElementById("roll_no").value;
-                list4[x] = document.getElementById("name").value;
-                list5[x] = document.getElementById("email").value;
-                list6[x] = document.getElementById("mob_no").value;
-                list7[x] = document.getElementById("sem").value;
-
-                var cel1 = NewRow.insertCell(0);
-                var cel2 = NewRow.insertCell(1);
-                var cel3 = NewRow.insertCell(2);
-                var cel4 = NewRow.insertCell(3);
-                var cel5 = NewRow.insertCell(4);
-                var cel6 = NewRow.insertCell(5);
-                var cel7 = NewRow.insertCell(6);
-
-                cel1.innerHTML = list1[x];
-                cel2.innerHTML = list2[x];
-                cel3.innerHTML = list3[x];
-                cel4.innerHTML = list4[x];
-                cel5.innerHTML = list5[x];
-                cel6.innerHTML = list6[x];
-                cel7.innerHTML = list7[x];
-
-                n++;
-                x++;
